# karncrypt

./: .gitignore  Cargo.toml  README.md  index.html  tailwind.config.js
.github/workflows/: main.yml  release.yml
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  password_manager.rs
src-tauri/src/commands/: auth.rs  generator.rs  health_checker.rs  manager.rs  mod.rs  setup.rs
src-tauri/src/commands/settings/: application.rs  database.rs  mod.rs  security.rs  system.rs
src-tauri/src/utils/: auth.rs  backup.rs  backup_compressor.rs  config.rs  database.rs  encryption.rs  mod.rs  models.rs  password_health.rs  session.rs
src/components/: mod.rs
src/components/auth/: login.rs  register.rs
src/components/icons/: icon.rs
src/components/info/: about.rs  guide.rs  license.rs  mod.rs  modal.rs
src/components/password_generator/: generator.rs  mod.rs
src/components/password_health/: dashboard.rs  mod.rs  table_check_items.rs
src/components/password_manager/: manager.rs  mod.rs  modal.rs  password_dialog.rs  table_item.rs
src/components/settings/: application.rs  database.rs  mod.rs  panel.rs  security.rs  system.rs
src/components/setup/: init.rs  mod.rs
src/components/utils/: loading_spinner.rs  mod.rs
styles/: styles.css
