[package]
name = "password-manager"
version = "0.1.0"
description = "A Password Managment System to store and retrieve passwords"
authors = ["KarnesTH"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "password_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.26"
env_logger = "0.11.6"
ring = "0.17.11"
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
toml = "0.8.20"
rusqlite = { version = "0.33.0", features = ["bundled-sqlcipher"] }
dirs = "6.0.0"
csv = "1.3.1"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2.2.1"
